# python_snipets

./: .gitignore  README.md
000_notes_donot_use/: README.md
001_logging_example/: README.md  app.py
001_logging_example/logging_configs/: config.json  config.yml  customlogger.py
001_logging_example/logs/: app.jsonl
002_pyproject.toml/: README.md  app.py  pyproject.toml
002_pyproject.toml/snakesay/: cli.py  snake.py
003_fastapi/: README.md  pyproject.toml
003_fastapi/app/: app.py  schemas.py
004_ffmpeg_webcam/: README.md  app.py  pyproject.toml
005_geometry_pygame/: README.md  basics.py  bezier.py  bezierdemo.py  pyproject.toml  shapes.py
006_profile_scans/: README.md  profiles.py  wifi_inrange.py
007_tkinter_widgets_oop/: README.md  app.py  curves.py
