[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "photos"
version = "0.1.0"
description = "A simple photo management application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "python-dotenv>=1.1.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "imagekitio>=4.2.0",
    "uvicorn[standard]>=0.37.0",
    "aiosqlite>=0.21.0",
]

