[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-fastapi-demo"
version = "0.1.0"
description = "A simple api backend for scafolding fastapi projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
]

