[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "RTSP_Streamer"
version = "0.1.0"
description = "A simple RTSP Streamer to view a wifi connected camera"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python"
]

