[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PygameGeometry"
version = "0.1.0"
description = "A simple pygame program to draw shapes from mathemmatical equations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame",
]

